fix: missing padding for popup body

--- a/default.css
+++ b/default.css
@@ -1,5 +1,5 @@
 body {
-  padding: 0;
+  padding: 10px;
   margin: 0;
   background-color: silver;
 }
